# Tikhonov_Regularization

./: CMakeLists.txt  README.md
include/: MatrixLoader.hpp  RegularizationSolver.hpp
src/: MatrixLoader.cpp  RegularizationSolver.cpp  main.cpp
